--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^8.18.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@swc/core": "^1.11.24",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.56.2",
